update oxidizedKernel